@@ -1,5 +1,6 @@
 Version 2.5.31dev:
 
+* Fixed a time offset bug in my_utime used by action_set_date.
 * Temporarily disabled serial port emulation (need code update).
 * Fixed handling of configurations_dir and cache_dir options.
 * Imported updated translations from crowdin.com.
